1. Метод .of.