@@ -11,24 +11,24 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenThreeDeps() {
-        List<String> input = Arrays.asList("k1/sk1/ssk1", "k2/sk2/ssk2/");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("k1/sk1/ssk1", "k2/sk2/ssk2/");
+        List<String> expect = List.of(
                 "k1", "k1/sk1", "k1/sk1/ssk1",
                 "k2", "k2/sk2", "k2/sk2/ssk2"
         );
@@ -38,7 +38,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenFillAllAndSortAsc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "k1/sk1/ssk1",
                 "k1/sk2",
                 "k1/sk1/ssk2",
@@ -47,7 +47,7 @@ public class DepartmentsTest {
         );
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -63,7 +63,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenFillAllAndSortDesc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "k1/sk1/ssk1",
                 "k1/sk2",
                 "k1/sk1/ssk2",
@@ -72,7 +72,7 @@ public class DepartmentsTest {
         );
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k2",
                 "k2/sk1",
                 "k2/sk1/ssk1",
